...
      /// height measurement for [autoHeight]
      allowImplicitScrolling: true,
      children: <Widget>[
        _reportingPage(
          0,
          StatsContainer(
            title: 'OBS Stats',
            trailing: const QuestionMarkTooltip(
              message:
                  'Stats marked with * are stats of OBS and not your computer.',
            ),
            child: StatTileGrid(
              tiles: [
...
                  label: 'Session Time',
                  text: dashboardStore.latestStreamStats?.totalTime
                      .secondsToFormattedDurationString(),
                  width: 100,
                ),
                StatTile(
                  label: 'kbit/s',
                  text: dashboardStore.latestStreamStats?.kbitsPerSec
                      .toString(),
                  width: 80,
                ),
                StatTile(
                  label: 'Total Output Frames',
...
