...
                bottomPadding: 0.0,
                leftPadding: AppSpacing.md,
                paddingChild: const EdgeInsets.symmetric(
                  vertical: AppSpacing.lg,
                ),
                child: CustomExpansionTile(
                  headerText: 'Exposed Controls',
                  headerPadding: const EdgeInsets.symmetric(
                    horizontal: AppSpacing.xl,
                  ),
                  expandedBody: Column(
                    children: [
                      const SizedBox(height: AppSpacing.lg),
...
